Fix FF scrollbar overlapping "more" icon
CU-861ma0xp1

--- a/nextgisweb/webmap/nodepkg/layers-tree/LayersTree.less
+++ b/nextgisweb/webmap/nodepkg/layers-tree/LayersTree.less
@@ -51,6 +51,22 @@
                     overflow: hidden;
                     text-overflow: ellipsis;
                 }
+
+                .more {
+                    text-align: center;
+
+                    @supports (-moz-appearance:none) {
+                        &, & svg {
+                            width: 32px;
+                        }
+                    }
+
+                    @media only screen and (hover: none) and (pointer: coarse) {
+                        &, & svg {
+                            width: 32px;
+                        }
+                    }
+                }
             }
         }
     }
